@@ -69,6 +69,7 @@ typedef struct {
 
 static EmbracePlugin *plugin = NULL;
 static Evas_List *servers = NULL;
+static Ecore_Event_Handler *ev_hdl[3];
 
 static ImapServer *find_server (Ecore_Con_Server *server)
 {
@@ -461,6 +462,13 @@ static bool imap_load_config (MailBox *mb, E_DB_File *edb,
 
 static void imap_shutdown ()
 {
+	int i;
+
+	for (i = 0; i < 3; i++) {
+		ecore_event_handler_del (ev_hdl[i]);
+		ev_hdl[i] = NULL;
+	}
+
 	ecore_con_shutdown ();
 }
 
@@ -478,12 +486,12 @@ bool embrace_plugin_init (EmbracePlugin *ep)
 
 	ecore_con_init ();
 
-	ecore_event_handler_add (ECORE_CON_EVENT_SERVER_ADD,
-	                         on_server_add, NULL);
-	ecore_event_handler_add (ECORE_CON_EVENT_SERVER_DATA,
-	                         on_server_data, NULL);
-	ecore_event_handler_add (ECORE_CON_EVENT_SERVER_DEL,
-	                         on_server_del, NULL);
+	ev_hdl[0] = ecore_event_handler_add (ECORE_CON_EVENT_SERVER_ADD,
+	                                     on_server_add, NULL);
+	ev_hdl[1] = ecore_event_handler_add (ECORE_CON_EVENT_SERVER_DATA,
+	                                     on_server_data, NULL);
+	ev_hdl[2] = ecore_event_handler_add (ECORE_CON_EVENT_SERVER_DEL,
+	                                     on_server_del, NULL);
 
 	return true;
 }
